# jct-semantic-code-search

./: .gitignore  README.md  evaluate_regex.py  pyproject.toml  results_2026-02-25_13-16-26.txt  results_2026-02-25_14-04-27.txt  results_2026-02-25_14-05-17.txt  results_2026-04-14_22-56-53.txt  results_2026-05-01_06-13-29.txt
.github/workflows/: build.yml  ci.yml  tests.yml
config/: config.yaml  gatorgrade.yml
demo_codebase/: exam_file.py  file_handler.py  input_validator.py  list_utils.py  math_utils.py
eval_benchmarks/concepts/file_handling/: file_handling_0.py  file_handling_100.py
eval_benchmarks/concepts/file_handling/base/: file_handling_25.py  file_handling_50.py
source/: Demo.py  file_read_0.py  file_read_100.py  file_read_25.py  file_read_50.py  problem1.py  problem2.py  problem3.py  problem4.py  problem5.py  problem6.py  problem7.py  problem8.py  problem9.py
src/: embedding.py
src/jct/: __init__.py  chunking.py  config,py  demo.py  evaluate.py  generate_dataset.py  search.py
tests/: test_chunking.py  test_confest.py  test_conftest.py  test_embedding.py  test_search.py
