[project]
name = "jct-semantic-code-search"
version = "0.1.0"
description = "Semantic behavioral code search engine for Python"
requires-python = ">=3.10"

dependencies = [
  "sentence-transformers",
  "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jct"]