[project]
name = "jct-semantic-code-search"
version = "0.1.0"
description = "Intent-based semantic code search engine for Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sentence-transformers",
    "numpy",
    "colorama"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jct"]

# 👇 THIS FIXES YOUR IMPORT ISSUE
[tool.pytest.ini_options]
pythonpath = ["src"]